Now can run the .jar with Java 1.8.